- #7351 Use deps script to make life easier for contribs
- #7352 Combine GitHub workflows to reduce config duplication
- #7354 Re-implement CI auto version increment for packaging
- #7353 Re-implement packaging for GitHub workflows (macOS)
- #7360 Re-implement packaging for GitHub workflows (Windows)
- #7361 Re-implement packaging for GitHub workflows (Linux)

# 1.14.6

Bug fixes:

- #7208 Crash on FreeBSD when pressing special keys on a client
- #7241 Change the default signature hashing algorithm for sha256
- #7242 TLS certificate generation for Flatpak

Enhancements:

- #7222 Initiate non-TLS connection from server
- #7225 Initiate TLS connection from server
- #7239 Single app for server and client
- #7248 Firewall exception for client
- #7250 Builds for Fedora 37 and 38

# 1.14.5

Bug fixes:

- #7182 Remove unused TLS options from the GUI on client
- #7186 No additional TLS options for all users setting

Enhancements:

- #7183 Refactoring for Synergy 3 licenses
- #7190 Maintenance license serial key support
- #7193 Support for maintenance licenses in China
- #7197 Special contributor mentions on the about screen
- #7203 License registration for Business edition
- #7210 Update macos workflow to use macos-latest
- #7213 Update azure pipelines to use macos-latest

# 1.14.4

Bug fixes:

- #7144 Double lines when pasting text from Linux to Windows
- #7149 Address issues with modifiers and dead keys
- #7163 Fix compilation issues for FreeBSD
- #7172 Memory leaks in language sync and TLS functionality
- #7175 Memory leaks in copy/paste and drag and drop functionality
- #7179 Disable drag and drop by default

Enhancements:

- #7143 Ability to stop Synergy on the login screen
- #7157 Synergy Business accepts only business licenses
- #7188 Synergy Basic\Pro accepts business licenses
- #7166 Replace language notifications with warnings in logs
- #7181 Fedora 36 support to CI system
- #7177 Create workflow for flatpak build support