@@ -1,7 +1,7 @@
 name: "Close stale issues and PRs"
 on:
   schedule:
-    - cron: "0 0 * * *"
+    - cron: "0 5 * * *"
 
 jobs:
   stale-issues:
